<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="460dp"
     android:background="#e6dcf8">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/registerbttn"
        android:layout_below="@+id/registerbttn"
        android:layout_marginTop="28dp" >
    </ScrollView>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pname"
        android:layout_alignBottom="@+id/pname"
        android:layout_alignLeft="@+id/namefield"
        android:text="@string/name_" />

    <EditText
        android:id="@+id/pname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/resid"
        android:layout_below="@+id/ip"
        android:ems="10"
        android:hint="@string/john_doe"
        android:inputType="text" >
    </EditText>

    <EditText
        android:id="@+id/ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/namefield"
        android:layout_alignBottom="@+id/namefield"
        android:layout_alignLeft="@+id/pname"
        android:ems="10"
        android:hint="@string/_84312"
        android:inputType="number" >
    </EditText>

    <TextView
        android:id="@+id/namefield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/patient_no_" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/resid"
        android:layout_alignBottom="@+id/resid"
        android:layout_alignLeft="@+id/name"
        android:text="@string/residence_" />

    <EditText
        android:id="@+id/serach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/pname"
        android:ems="10"
        android:hint="@string/_23"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/serach"
        android:layout_alignBottom="@+id/serach"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/textView6"
        android:text="@string/age_"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText2"
        android:layout_alignBottom="@+id/editText2"
        android:layout_alignParentLeft="true"
        android:text="@string/gender_"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/resid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editText2"
        android:ems="10"
        android:hint="@string/kisumu"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:hint="@string/f"
        android:inputType="text" />

    <TextView
        android:id="@+id/nameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText3"
        android:layout_alignBottom="@+id/editText3"
        android:layout_alignParentLeft="true"
        android:text="@string/ward_no_"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/bed"
        android:ems="10"
        android:hint="@string/disease"
        android:inputType="text|textMultiLine" />

    <EditText
        android:id="@+id/bed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/nameField"
        android:ems="10"
        android:hint="@string/_1"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/resid"
        android:ems="10"
        android:hint="@string/_7"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/weight"
        android:layout_marginTop="14dp"
        android:text="@string/height_" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/height_"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/registerbttn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:text="@string/register_new" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/notes"
        android:ems="10"
        android:hint="@string/weight_"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/weight"
        android:layout_alignBottom="@+id/weight"
        android:layout_alignParentLeft="true"
        android:text="@string/weight_" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/notes"
        android:layout_alignBottom="@+id/notes"
        android:layout_alignParentLeft="true"
        android:text="@string/diagnosis_" />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bed"
        android:layout_alignBottom="@+id/bed"
        android:layout_alignParentLeft="true"
        android:text="@string/bed_no_"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>

</android.support.v4.widget.DrawerLayout>