<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/serach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pwd"
        android:layout_alignBottom="@+id/pwd"
        android:layout_alignRight="@+id/textView1"
        android:text="@string/password_"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/nameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/fname"
        android:layout_alignBottom="@+id/fname"
        android:layout_alignLeft="@+id/namefield"
        android:text="@string/first_name_"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/cpass"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="text|textPersonName" />

    <EditText
        android:id="@+id/pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/serach"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword|textPersonName" />

    <TextView
        android:id="@+id/namefield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cpass"
        android:layout_alignBottom="@+id/cpass"
        android:layout_alignLeft="@+id/textView2"
        android:text="@string/confirm_password_"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/design"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lname"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lname"
        android:ems="10"
        android:hint="@string/senior_nurse_ii"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pwd"
        android:layout_alignParentLeft="true"
        android:text="@string/username_"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/ward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/design"
        android:ems="10"
        android:hint="@string/_7"
        android:inputType="number|textPersonName" />

    <EditText
        android:id="@+id/lname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/fname"
        android:ems="10"
        android:hint="@string/last_name_"
        android:inputType="text|textPersonName" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lname"
        android:layout_alignBottom="@+id/lname"
        android:layout_alignRight="@+id/nameField"
        android:text="@string/last_name_"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/design"
        android:layout_alignBottom="@+id/design"
        android:layout_alignLeft="@+id/nameField"
        android:text="Designation:"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ward"
        android:layout_alignBottom="@+id/ward"
        android:layout_alignLeft="@+id/textView5"
        android:text="@string/ward_"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ward"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ward"
        android:ems="10"
        android:hint="@string/_2547xxxxxxxx"
        android:inputType="number|phone" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/phone"
        android:layout_alignBottom="@+id/phone"
        android:layout_alignLeft="@+id/age"
        android:text="@string/phone_no_"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/regbtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/phone"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="14dp"
        android:text="@string/register" />

    <Button
        android:id="@+id/viewbtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/regbtn2"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:text="@string/view" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/phone"
        android:layout_below="@+id/phone"
        android:layout_marginTop="21dp"
        android:text="@string/clear" />

    <EditText
        android:id="@+id/cpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/pwd"
        android:layout_toRightOf="@+id/namefield"
        android:ems="10"
        android:hint="@string/confirm_password_"
        android:inputType="textPassword|textPersonName" />

</RelativeLayout>